# trading-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_task.sh
memory/: account.json  watchlist.json
src/: broker.py  config.py  notify.py  orchestrator.py  research.py  risk.py  screener.py  state.py
strategy/: risk_limits.yaml  rules.md  universe.yaml
tasks/: close_summary.py  midday_review.py  open_trade.py  premarket_brief.py  weekly_review.py
tests/: conftest.py  test_broker_paper.py  test_kill_switch.py  test_risk.py
