[project]
name = "trading-agent"
version = "0.1.0"
description = "Autonomous trading agent running on Claude Code Routines. Paper-first, risk-gated, git-as-memory."
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.30.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pytz>=2026.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
